--- a/css/main.css
+++ b/css/main.css
@@ -257,7 +257,7 @@ footer a {
 }
 
 footer .footer-above {
-    padding: 65px 0;
+    padding: 140px 0 65px 0;
 }
 
 footer .footer-col,
@@ -343,7 +343,7 @@ footer .footer-below {
 }
 
 .d-block {
-    max-height: 600px;
+    max-height: 550px;
     width: 100%;
 }
 
